--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^1.23.1",
-		"dotenv": "^10.0.0"
+		"dotenv": "^10.0.0",
+		"svelte-icons": "^2.1.0"
 	}
 }
