--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^1.23.1",
 		"dotenv": "^10.0.0",
-		"svelte-icons": "^2.1.0"
+		"vite": "^2.6.5"
 	}
 }
