--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^1.23.1",
+		"@sveltejs/adapter-vercel": "next",
 		"dotenv": "^10.0.0",
-		"vite": "^2.6.5",
-		"@sveltejs/adapter-vercel": "next"
+		"lodash": "^4.17.21",
+		"vite": "^2.6.5"
 	}
 }
