--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "cbsc-web",
+	"name": "cbsc-designer",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"preview": "svelte-kit preview",
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -28,13 +28,13 @@
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.6",
 		"tslib": "^2.4.0",
-		"typescript": "^4.7.4"
+		"typescript": "^4.7.4",
+		"vite": "^3.0.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^1.35.4",
 		"@sveltejs/adapter-vercel": "next",
-		"dotenv": "^16.0.1",
-		"vite": "^3.0.0"
+		"dotenv": "^16.0.1"
 	}
 }
